apps/base/media/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &deploymentName bazarr-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *deploymentName
  template:
    metadata:
      labels:
        app: *deploymentName
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/London
            - name: PUID
              value: "1001"
            - name: PGID
              value: "100"
          image: ghcr.io/linuxserver/bazarr:latest@sha256:c1673816321156b904af9b7e6415ea547ae9622e4acc375358f1e1eb9ed1e904
          imagePullPolicy: IfNotPresent
          name: bazarr
          ports:
            - containerPort: 6767
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config-volume
              subPath: bazarr/config
            - mountPath: /movies
              name: data-volume
              subPath: jellyfin/media/movies
            - mountPath: /tv
              name: data-volume
              subPath: jellyfin/media/tv
            - mountPath: /anime
              name: data-volume
              subPath: jellyfin/media/anime
      hostname: bazarr
      volumes:
        - name: config-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: ${NFS_STORAGE_CONFIG_DATA_PATH}
        - name: data-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: /mnt/mopower/swarm-data
