apps/base/media/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr-service
spec:
  selector:
    app: bazarr-deployment
  ports:
  - name: http
    port: 6767
    targetPort: 6767
    protocol: TCP
