apps/base/media/bazarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.local.${DOMAIN}`)
      kind: Rule
      services:
        - name: bazarr-service
          port: 6767
  tls:
    certResolver: letsencrypt
